--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "split-images",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/imageSplitter.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Achilles Moraites",
   "license": "ISC",
   "dependencies": {
     "jimp": "^0.6.1"
