--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "split-images",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "lib/imageSplitter.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["split image","split","image to chunks","image splitter"],
   "author": "Achilles Moraites",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "jimp": "^0.6.1"
   },
